--- a/ci/Jenkinsfile
+++ b/ci/Jenkinsfile
@@ -1,42 +1,111 @@
-@Library('jenkins-shared') _
-
 pipeline {
     agent any
-    
+
+    environment {
+        REGISTRY = "salimanaim123"
+        IMAGE = "securedev-app"
+    }
+
     stages {
+
+        // ------------------- Checkout GitHub -------------------
         stage('Checkout') {
             steps {
                 checkout scm
             }
         }
-        
-        stage('Build') {
+
+        // ------------------- Build Docker Image -------------------
+        stage('Build Docker Image') {
             steps {
-                echo 'Building...'
-                // Tes étapes de build ici
+                echo 'Building Docker image...'
+                bat "docker build -t %REGISTRY%/%IMAGE%:latest ."
             }
         }
-        
-        stage('Test') {
+
+        // ------------------- Generate SBOM -------------------
+        stage('Generate SBOM') {
             steps {
-                echo 'Testing...'
-                // Tes étapes de test ici
+                echo 'Generating SBOM with Syft...'
+                bat "..\\scripts\\generate_sbom.bat"
+            }
+        }
+
+        // ------------------- Scan SBOM (Grype) -------------------
+        stage('Scan SBOM') {
+            steps {
+                echo 'Scanning SBOM with Grype...'
+                bat "..\\scripts\\grype_scan.bat"
+            }
+        }
+
+        // ------------------- Scan Docker Image (Trivy) -------------------
+        stage('Scan Image') {
+            steps {
+                echo 'Scanning Docker image with Trivy...'
+                bat "..\\scripts\\trivy_scan.bat %REGISTRY%/%IMAGE%:latest"
+            }
+        }
+
+        // ------------------- Archive Reports -------------------
+        stage('Archive Reports') {
+            steps {
+                echo 'Archiving security reports...'
+                archiveArtifacts artifacts: 'sbom.json, grype-report.txt, trivy-report.txt',
+                                 allowEmptyArchive: true
+            }
+        }
+
+        // ------------------- Fail if Critical Vulnerabilities -------------------
+        stage('Fail on Critical Vulns') {
+            steps {
+                script {
+                    def criticalFound = bat(
+                        script: 'findstr /C:"CRITICAL" grype-report.txt',
+                        returnStatus: true
+                    )
+
+                    if (criticalFound == 0) {
+                        error("❌ Vulnérabilités CRITIQUES détectées — arrêt du pipeline")
+                    } else {
+                        echo "✅ Aucune vulnérabilité critique détectée"
+                    }
+                }
+            }
+        }
+
+        // ------------------- Sign Docker Image (Cosign) -------------------
+        stage('Sign Image') {
+            steps {
+                withCredentials([
+                    file(credentialsId: 'cosign.key', variable: 'COSIGN_KEY')
+                ]) {
+                    echo 'Signing Docker image with Cosign...'
+                    bat "..\\scripts\\sign.bat %REGISTRY%/%IMAGE%:latest"
+                }
+            }
+        }
+
+        // ------------------- Push Docker Image -------------------
+        stage('Push Image') {
+            steps {
+                withCredentials([
+                    string(credentialsId: 'registry_token', variable: 'REG_TOKEN')
+                ]) {
+                    echo 'Pushing Docker image to registry...'
+                    bat "docker login -u %REGISTRY% -p %REG_TOKEN%"
+                    bat "docker push %REGISTRY%/%IMAGE%:latest"
+                }
             }
         }
     }
-    
+
     post {
         success {
-            echo 'Build completed successfully!'
+            echo "✅ Secure CI/CD pipeline completed successfully"
         }
-        
         failure {
-            echo 'Build failed!'
-        }
-
-        always {
-            // Appel à ta Shared Library pour notifier Spring Boot
-            notifySpringBoot()
+            echo "❌ Secure CI/CD pipeline failed"
         }
     }
 }
